# hubris

./: CLAUDE.md  Cargo.toml  HUBRIS_TESTING_DESIGN.md  build-ast1060.sh  i2c-work.md  run-gdb-i2c-scaffold-app.sh  run-qemu-i2c-scaffold-app.sh
app/ast1060-i2c-scaffold/: Cargo.toml  README.md  app.toml
app/ast1060-i2c-scaffold/src/: main.rs
app/ast1060-spdm-responder/: Cargo.toml  app.toml
app/ast1060-spdm-responder/src/: main.rs
app/ast1060-starter/: Cargo.toml  app.toml
app/ast1060-starter/src/: main.rs
app/demo-ast1060/: Cargo.toml  README.md  app.toml
app/demo-ast1060-rot/: Cargo.toml  app.toml
app/demo-ast1060-rot/src/: main.rs
app/demo-ast1060/src/: main.rs
boards/: ast1060-dev.toml  ast1060-rot.toml
chips/ast1060/: chip.toml  memory.toml
copilot/: i2c-crate-partition.md
doc/: aspeed-ddk-integration.md  ast1060-demo-summary.md
drv/ast1060-hmac-hash/: Cargo.toml  IMPLEMENTATION_REPORT.md  README.md
drv/ast1060-hmac-hash-server/: Cargo.toml  build.rs
drv/ast1060-hmac-hash-server/src/: main.rs
drv/ast1060-hmac-hash-simple/: Cargo.toml  README.md
drv/ast1060-hmac-hash-simple/src/: lib.rs
drv/ast1060-hmac-hash/examples/: basic_test.rs
drv/ast1060-hmac-hash/src/: lib.rs
drv/ast1060-i2c/: Cargo.toml  build.rs
drv/ast1060-i2c-server/: Cargo.toml  build.rs
drv/ast1060-i2c-server/src/: main.rs
drv/ast1060-i2c/src/: lib.rs
drv/ast1060-uart/: Cargo.toml  build.rs
drv/ast1060-uart-bak/: Cargo.toml
drv/ast1060-uart-bak/src/: main.rs
drv/ast1060-uart/src/: main.rs
drv/hmac-hash-api/: Cargo.toml  build.rs
drv/hmac-hash-api/src/: lib.rs
drv/i2c-api/src/: lib.rs
drv/i2c-mux-core/: Cargo.toml  README.md
drv/i2c-mux-core/src/: lib.rs  pca9545.rs  pca9548.rs
drv/i2c-types/: Cargo.toml
drv/i2c-types/src/: lib.rs  traits.rs
drv/openprot-i2c-server/: Cargo.toml  build.rs
drv/openprot-i2c-server/src/: i2c_topology.rs  main.rs  mock_driver.rs
drv/spdm-responder-api/: Cargo.toml  build.rs
drv/spdm-responder-api/src/: lib.rs
drv/spdm-responder-server/: Cargo.toml  build.rs
drv/spdm-responder-server/src/: main.rs
drv/stm32xx-i2c/: Cargo.toml
drv/stm32xx-i2c-server/src/: main.rs  service.rs  traits.rs
drv/stm32xx-i2c/src/: lib.rs  mux_adapters.rs  pca9545.rs  pca9548.rs
idl/: hmac-hash.idol  spdm-responder.idol
lib/ast1060-uart/: Cargo.toml
lib/ast1060-uart/src/: lib.rs
task/demo-ast1060/: Cargo.toml
task/demo-ast1060/src/: main.rs
task/helloworld/: Cargo.toml
task/helloworld/src/: main.rs
task/hmac-hash/: Cargo.toml
task/hmac-hash-test/: Cargo.toml
task/hmac-hash/src/: main.rs
task/i2c-client/: Cargo.toml  build.rs
task/i2c-client/src/: main.rs
task/pong/src/: main.rs
task/spdm-resp/: Cargo.toml
task/spdm-resp/src/: main.rs  platform_stubs.rs
test/tests-ast1060-starter/: Cargo.toml  app.toml  build.rs
test/tests-ast1060-starter/src/: main.rs
