[package]
name = "drv-ast1060-hmac-hash-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = { workspace = true }
cortex-m = { workspace = true }
idol-runtime = { workspace = true }
num-traits = { workspace = true }
ast1060-pac = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

drv-hmac-hash-api = { path = "../hmac-hash-api" }
drv-ast1060-hmac-hash = { path = "../ast1060-hmac-hash" }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }

[build-dependencies]
build-util = { path = "../../build/util" }
idol = { workspace = true }

[features]
no-ipc-counters = ["idol/no-counters"]

[[bin]]
name = "drv-ast1060-hmac-hash-server"
test = false
doctest = false
bench = false

[lints]
workspace = true
