[package]
name = "drv-ast1060-uart-bak"
version = "0.1.0"
edition = "2021"

[dependencies]
aspeed-ddk = { workspace = true }
ast1060-pac = { workspace = true }
cortex-m = { workspace = true }
embedded-hal = { workspace = true }
num-traits = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

userlib = { path = "../../sys/userlib", features = ["panic-messages"] }

[build-dependencies]
build-util = { path = "../../build/util" }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-ast1060-uart-bak"
test = false
doctest = false
bench = false

[lints]
workspace = true
