[package]
name = "drv-ast1060-uart"
version = "0.1.0"
edition = "2021"

[dependencies]
aspeed-ddk = { workspace = true }
ast1060-pac = { workspace = true }
cortex-m = { workspace = true }
embedded-hal = { workspace = true }
lib-ast1060-uart = { path = "../../lib/ast1060-uart" }
nb = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }

[build-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }

build-util = { path = "../../build/util" }
idol = { workspace = true }

[features]
no-ipc-counters = ["idol/no-counters"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-ast1060-uart"
test = false
doctest = false
bench = false

[lints]
workspace = true
