[package]
name = "spdm-resp"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
mctp-api = { path = "../mctp-api" }
mctp = { workspace = true }

# SPDM library from external repository
spdm-lib = { git = "https://github.com/rusty1968/spdm-lib.git", branch = "antrocha/responder-app-crypto", package = "spdm-lib", default-features = false, features = [] }

# Additional dependencies that might be needed
heapless = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }


# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "spdm-resp"
test = false
doctest = false
bench = false

[lints]
workspace = true